<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tacode</string>
    <string name="edit_message">Enter a message</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- MainActivity -->
    <string name="main_text_username_hint">Username</string>
    <string name="main_text_password_hint">Password</string>
    <string name="main_button_submitLogin">Login</string>
    <string name="main_button_userRegistration">Register Now!</string>
    <string name="desc">This is an image</string>
    <string name="tacode">T A C O D E</string>

    <!-- UserAccountCreate -->
    <string name="title_activity_user_account_create">Account Create</string>
    <string name="user_create_account_text_firstName_hint">First Name</string>
    <string name="user_create_account_text_lastName_hint">Last Name</string>
    <string name="user_create_account_address">Address Information</string>
    <string name="user_create_account_text_streetAddress_hint">Street Address</string>
    <string name="user_create_account_text_city_hint">City</string>
    <string name="user_create_account_text_state_hint">State</string>
    <string name="user_create_account_text_zipCode_hint">Zip Code</string>
    <string name="user_create_account_text_socialSecurityNumber_hint">Social Security Number</string>
    <string name="user_create_account_text_email_hint">Email</string>
    <string name="user_create_account_text_createUsername_hint">Create Username</string>
    <string name="user_create_account_text_createPassword_hint">Create Password</string>
    <string name="user_create_account_button_submitUserAccount">Create Account</string>
    <string name="user_create_account_title">Register User</string>

    <!-- UserHome -->
    <string name="title_activity_user_home">Home</string>
    <string name="user_home_welcome">You\'ve logged in!</string>
    <string name="main_new">New User?</string>
    <string name="user_home_title">Home</string>
    <string name="title_activity_user_account">Account</string>
    <string name="user_home_accounts">Accounts</string>
    <string name="user_home_transfer">Transfers</string>
    <string name="user_home_checkings">Checkings</string>
    <string name="user_home_savings">Savings</string>
    <string name="user_home_close_account">X\nClose sub\nAccount</string>
    <string name="user_home_open_account">+\nOpen sub\nAccount</string>
    <string name="title_activity_user_account_list">Accounts</string>

    <!-- Credit -->
    <string name="credit_withdrawal">Credit Account</string>
    <string name="credit_number_amount_hint">Withdrawal Amount</string>
    <string name="credit_button_submitCreditWithdrawal"> Submit </string>

    <!-- Debit -->
    <string name="debit_withdrawal">Debit Account</string>
    <string name="debit_number_amount_hint">Withdrawal Amount</string>
    <string name="debit_button_submitDebitWithdrawal"> Submit </string>
    <string name="title_activity_user_transfer">Transfer</string>
    <string name="title_activity_transfer">TransferActivity</string>

    <!-- Transfer -->
    <string name="internal_field1">Click to select source account&#8230;</string>
    <string name="internal_field2">Enter Destination User\'s Email</string>
    <string name="internal_field3">Enter Amount</string>
    <string name="personal_field1">Click to select source account&#8230;</string>
    <string name="personal_field2">Click to select destination account&#8230;</string>
    <string name="personal_field3">Enter Amount</string>
    
    

    <!-- Settings -->
    <string name="user_settings_update_account_info">Update Account Info</string>
    <string name="user_settings_open_bank_account">Open Bank Account</string>
    <string name="user_settings_close_bank_account">Close Bank Account</string>
    <string name="user_settings_close_main_account">Close Main Account</string>
    <string name="title_activity_user_account_settings">Settings</string>

    <!--  Account -->
    <string name="user_account_activity">Account Activity</string>
    
	<string name="action_logout">Log Out</string>
</resources>
