<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"  >
	    
	<EditText android:id="@+id/personal_field1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:imeOptions="flagNoExtractUi"
		android:fontFamily="sans-serif"
		android:layout_gravity="center"
		android:onClick="onClick"
		android:hint="@string/personal_field1" />
		
	<EditText android:id="@+id/personal_field2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:imeOptions="flagNoExtractUi"
		android:fontFamily="sans-serif"
		android:layout_gravity="center"
		android:onClick="onClick"
		android:hint="@string/personal_field2"
		android:inputType="number" />
	
	<EditText android:id="@+id/personal_field3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:imeOptions="flagNoExtractUi"
		android:fontFamily="sans-serif"
		android:layout_gravity="center"
		android:hint="@string/personal_field3" 
		android:inputType="numberDecimal"/>
</LinearLayout>