<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">
    
    <!-- Focusable and FocusableInTouchMode stop the first text box from auto-focusing -->
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:gravity="center"
		android:focusable="true"
		android:orientation="vertical"
		android:focusableInTouchMode="true" >
	    
	    <ImageView
	        android:id="@+id/logo_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/desc"
	        android:src="@drawable/logo" />
	    
	    <TextView android:id="@+id/main_text_tacode"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:gravity="center"
		    android:fontFamily="sans-serif"
		    android:textSize="30sp"
		    android:text="@string/tacode"/>
	    
	    <FrameLayout
	        android:layout_width="fill_parent"
    		android:layout_height="wrap_content" >
		    
		    <EditText android:id="@+id/main_text_username_field"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp" 
		        android:gravity="left"
		        android:singleLine="true"
		        android:imeOptions="flagNoExtractUi"		      
		        android:hint="@string/main_text_username_hint" />
		    
		    <Button
		        android:id="@+id/main_button_clear_user"
        		android:layout_width="wrap_content"
       		 	android:layout_height="wrap_content"
        		android:layout_marginRight="10dp"
        		android:layout_gravity="right|center_vertical"
        		android:onClick="clearUser"
        		android:background="@android:drawable/ic_menu_close_clear_cancel" />
	    </FrameLayout>
	    
	    <FrameLayout
	        android:layout_width="fill_parent"
    		android:layout_height="wrap_content" >
		    
		    <EditText android:id="@+id/main_text_password_field"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"       
		        android:gravity="left"
		        android:singleLine="true"
		        android:imeOptions="flagNoExtractUi"
		        android:fontFamily="sans-serif"
		        android:hint="@string/main_text_password_hint"  
		        android:inputType="textPassword" />
		    
		    <Button
		        android:id="@+id/main_button_clear_pass"
		        android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	        	android:layout_marginRight="10dp"
	        	android:layout_gravity="right|center_vertical"
	        	android:onClick="clearPass"
	        	android:background="@android:drawable/ic_menu_close_clear_cancel" />
		</FrameLayout>
	    
	    <Button
	        android:id="@+id/main_button_submit_login"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:onClick="submitLogin"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/custom_button"
	        android:textColor="#FFFFFF"
	        android:text="@string/main_button_submitLogin" />
	    
	    <TextView android:id="@+id/main_text_new"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="60dp"
		    android:gravity="center"
		    android:text="@string/main_new"/>
	    
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center" 
	        android:background="@drawable/custom_button"
	        android:textColor="#FFFFFF"
	        android:text="@string/main_button_userRegistration" 
	        android:onClick="userRegistration"/>
	</LinearLayout>
</ScrollView>


