<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">
    
<LinearLayout
    android:id="@+id/lLayout"
    android:layout_width="fill_parent"
    android:layout_height="529dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <FrameLayout
        android:id="@+id/bannerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/activity_user_account_name_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/accfunction_button_default"
            android:gravity="center" />

        <TextView
            android:id="@+id/activity_user_account_name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:foreground="@id/activity_user_account_name_banner"
            android:gravity="center"
            android:text="@string/user_home_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </FrameLayout>



    <Button
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logo" />

    <Button
        android:id="@+id/activity_user_account_checkings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:background="@drawable/ui_homebuttons"
        android:fontFamily="sans-serif"
        android:onClick="userAccountList"
        android:text="@string/user_home_accounts"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/activity_user_account_savings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:background="@drawable/ui_homebuttons"
        android:fontFamily="sans-serif"
        android:onClick="startTransferActivity"
        android:text="@string/user_home_transfer"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
        
        
    <!--  
    <Button
        android:id="@+id/activity_user_account_create"
        android:layout_width="245dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ui_homebuttons"
        android:fontFamily="sans-serif"
        android:text="@string/user_home_open_account"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/activity_user_account_remove"
        android:layout_width="245dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ui_homebuttons"
        android:fontFamily="sans-serif"
        android:text="@string/user_home_close_account"
        android:textColor="#FFFFFF"
        android:textSize="18sp" /> -->

    <!--
<Button
    android:id="@+id/activity_user_account_transfers"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/accounts_button"
    android:fontFamily="sans-serif"
    android:text="Transfer"
    android:textColor="#BB0000"
    android:textSize="18sp"
    android:onClick="userTransfer" />
    -->

</LinearLayout>

</ScrollView>